# final-project-yyk99

./: .editorconfig  .gitignore  .gitmodules  BUILD.md  README.md  build.sh  dot.config
kb/: howto-1.md
termosos/: README.md  dot.config
termosos/udpserver/: .gitignore  Makefile  main.c  server.h  udp_echo_client.c
termosos/yyk99_extra/: Config.in  external.desc  external.mk
termosos/yyk99_extra/package/pino_eth0/src/: README.md
termosos/yyk99_extra/package/termosos/: Makefile  termosos.mk
yyk99_extra/: Config.in
yyk99_extra/package/iot_in_c/: CMakeLists.txt  Config.in  FAQ.pins.txt  README.txt  blinker.c  blinker.h  blinker_test.c  iot_in_c.mk  p1.c  page103.c  page195.c  page195_dht11.c  page195_dht11_srv.c  page57.c  page83.c  page89.c  read_dht11.py  temperature_utils.c  temperature_utils.h
yyk99_extra/package/libbcm2835-dev/: Config.in  libbcm2835-dev.mk
yyk99_extra/package/pino_eth0/: Config.in  pino_eth0.mk
yyk99_extra/package/pino_eth0/src/: Makefile
yyk99_extra/package/termosos/: Config.in  Makefile  termosos.mk
yyk99_extra/package/termosos/driver/: .gitignore  Makefile  README.md  S98dht11_driver  bcm2835.c  bcm2835.h  dht11.c  dht11.h  dht11_driver.h  dht11_ioctl.h  driver_load  driver_unload  main.c  make-etags.sh
yyk99_extra/package/termosos/udpserver/: .gitignore  Makefile  README.md  main.c  server.c  server.h  udp_echo_client.c  udpclient.c
yyk99_extra/raspberrypi3-64/: linux-extra.config  linux-extras.config
yyk99_extra/rootfs-overlay/etc/init.d/: S05modules  S99udpserver
